MyDevOrg/src/objects/Defect_Time_Sheet__c.object
<CustomObject>
    <fields>
        <fullName>Defect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Defect</label>
        <referenceTo>Defect__c</referenceTo>
        <relationshipLabel>Defect Time Sheets</relationshipLabel>
        <relationshipName>Defect_Time_Sheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Developer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Defect_Time_Sheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hours_worked__c</fullName>
        <label>Hours worked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timesheet_Date__c</fullName>
        <label>Timesheet Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_description__c</fullName>
        <label>Work description</label>
        <type>TextArea</type>
    </fields>
    <label>Defect Time Sheet</label>
    <nameField>
        <displayFormat>DTH{0000000}</displayFormat>
        <label>Defect Time Sheet ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defect Time Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>